# DNSLogQuery

fanzhaLogQuery/: .gitignore  Cargo.toml  config.yaml  rust_walkthrough.md
fanzhaLogQuery/deploy/: fanzha_log_query  fanzha_log_query_linux_arm_musl_v2  fanzha_log_query_v3
fanzhaLogQuery/src/: config.rs  main.rs  matcher.rs  processor.rs
