[package]
name = "fanzha_log_query"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng"] } # 使用高性能 zlib-ng
memchr = "2.7"
num_cpus = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5"
cidr = "0.2"
tikv-jemallocator = "0.5" # 高性能内存分配器
glob = "0.3"
chrono = "0.4"
crossbeam-channel = "0.5"
