[package]
name = "fanzha_log_query"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng"] }
memchr = "2.7"
num_cpus = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5"
cidr = "0.2"
mimalloc = { version = "0.1", default-features = false }

glob = "0.3"
chrono = "0.4"
core_affinity = "0.8"
crossbeam-channel = "0.5"
